





import java.util.List;
import java.util.ArrayList;

public class builds_ChangeSet  {

    private String kind;



    public builds_ChangeSet(
        String kind    ) {
        this.kind = kind;
    }


    public String getKind() {
        return kind;
    }

    public void setKind(String kind) {
        this.kind = kind;
    }


}