





import java.util.List;
import java.util.ArrayList;

public class builds_PlanParameterDefinition extends ParameterDefinition {




    public builds_PlanParameterDefinition(
    ) {
        super(
        );
    }




}